# shijuan-shenqi

./: .gitignore  LICENSE  README.md  generate-exam-g5.js  generate-exam.js  package-lock.json  package.json
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/resources/data/: index.json
web/src-tauri/resources/data/chinese/renjiao/: grade-1-shang.json  grade-1-xia.json  grade-2-shang.json  grade-2-xia.json  grade-3-shang.json  grade-3-xia.json  grade-4-shang.json  grade-4-xia.json  grade-5-shang.json  grade-5-xia.json  grade-6-shang.json  grade-6-xia.json
web/src-tauri/resources/data/english/renjiao/: grade-3-shang.json  grade-3-xia.json  grade-4-shang.json  grade-4-xia.json  grade-5-shang.json  grade-5-xia.json  grade-6-shang.json  grade-6-xia.json
web/src-tauri/resources/data/math/beishida/: grade-1-shang.json  grade-1-xia.json  grade-2-shang.json  grade-2-xia.json  grade-3-shang.json  grade-3-xia.json  grade-4-shang.json  grade-4-xia.json  grade-5-shang.json  grade-5-xia.json  grade-6-shang.json  grade-6-xia.json
web/src-tauri/resources/data/math/renjiao/: grade-1-shang.json  grade-1-xia.json  grade-2-shang.json  grade-2-xia.json  grade-3-shang.json  grade-3-xia.json  grade-4-shang.json  grade-4-xia.json  (+4 more)
web/src-tauri/src/: ai.rs  appsj.rs  bank.rs  config.rs  contracts.rs  curriculum_diff.rs  ebook_site.rs  generate.rs  history.rs  knowledge.rs  lesson_plan.rs  lib.rs  main.rs  print_util.rs  quality.rs  review.rs  scrape_dzkbw.rs  secret.rs  spec_table.rs  storage.rs  templates.rs  verify.rs
(+42 files in other folders)
